--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,41 @@
+@font-face {
+  font-family: monkey;
+  src: url(/happy-monkey.ttf);
+}
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background: black;
+  color: white;
+  font-family: monkey, sans-serif;
+  font-size: 20px;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  position: absolute;
+  top: 0;
+  right: 25px;
+  margin: 0;
+  font-size: 1.25rem;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+#text-box {
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+  width: 730px;
+  height: 130px;
+  padding: 10px;
+  margin: auto;
+  background: rgba(0,0,0, 0.5);
+  border-radius: 10px;
+}
+
+#locations-list {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  text-align: right;
+  font-size: 0.75rem;
+  list-style-type: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
