--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,16 @@ h1 {
   right: 25px;
   margin: 0;
   font-size: 1.25rem;
+  font-weight: bold;
+}
+
+h2 {
+  position: absolute;
+  top: 70px;
+  right: 25px;
+  margin: 0;
+  font-size: 1.15rem;
+  font-weight: bold;
 }
 
 h3 {
@@ -43,6 +53,19 @@ h3 {
 ul {
     list-style-type: none;
     padding: 0 0.25rem;
+}
+
+#main {
+  width: 800px;
+  height: 600px;
+  margin: auto;
+  position: relative;
+  background: var(--darkest);
+}
+
+#title-display {
+  font-size: 5rem;
+  text-align: center;
 }
 
 #text-box {
@@ -57,9 +80,16 @@ ul {
   border-radius: 10px;
 }
 
-#locations-list {
+#cover {
   position: absolute;
   top: 25px;
+  right: 25px;
+  font-size: 2rem;
+}
+
+#locations-list {
+  position: absolute;
+  top: 85px;
   right: 25px;
   text-align: right;
   font-size: 0.75rem;
@@ -67,6 +97,7 @@ ul {
 }
 
 #credits {
+  width: 800px;
   font-size: 0.7rem;
-  margin: 0;
+  margin: 0 auto;
 }
