--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@
   font-family: monkey, sans-serif;
   font-size: 20px;
 
-  --darkest: #051f39;
-  --medium1: #4a2480;
-  --medium2: #c53a9d;
-  --lightest: #ff8e80;
+  --darkest: rgb(5, 31, 57);
+  --medium1: rgb(74, 36, 128);
+  --medium2: rgb(197, 58, 157);
+  --lightest: rgb(255, 142, 128);
 }
 
 a {
@@ -26,11 +26,14 @@ a:hover {
   color: var(--lightest);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
 h1 {
   position: absolute;
   top: 0;
   right: 25px;
-  margin: 0;
   font-size: 1.25rem;
   font-weight: bold;
 }
@@ -39,7 +42,6 @@ h2 {
   position: absolute;
   top: 70px;
   right: 25px;
-  margin: 0;
   font-size: 1.15rem;
   font-weight: bold;
 }
@@ -47,7 +49,6 @@ h2 {
 h3 {
   cursor: pointer;
   font-size: 0.8rem;
-  margin: 0;
 }
 
 ul {
@@ -106,6 +107,18 @@ ul {
 #briefing {
   padding: 25px;
   text-align: center;
+}
+
+#cover-modal {
+  position:relative;
+  top: 50%;
+  background: var(--medium2);
+  border-radius: 10px;
+  margin: auto;
+  width: 250px;
+  height: 100px;
+  padding: 10px;
+  z-index: 100;
 }
 
 .briefing-profile {
