--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ ul {
   height: 185px;
   padding: 10px;
   margin: auto;
-  background: rgba(0,0,0, 0.5);
+  background: rgba(6,15,27, 0.9);
   border-radius: 10px;
   text-align: left;
 }
@@ -260,4 +260,16 @@ button:hover {
 
 .map-arrow {
   width: 10px;
+}
+
+#hints {
+  position: absolute;
+  bottom: 25px;
+  left: 25px;
+  font-size: 0.8rem;
+}
+
+#hints ul {
+  margin: 0;
+  list-style-type: disc;
 }
