dialogue mouseover, fix cover bug

--- a/src/index.css
+++ b/src/index.css
@@ -240,6 +240,10 @@ button:hover {
   margin-right: 0.5rem;
 }
 
+.dialogue-click:hover {
+  color: var(--lightest);
+}
+
 .map-location {
   position: absolute;
 }
